--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Q R generate</title>
+    <title>DEAR😘PAL</title>
     <link rel="stylesheet" href="qr.css">
 </head>
 
