--- a/index.html
+++ b/index.html
@@ -5,29 +5,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DEAR😘PAL</title>
+    <title>Q R generate</title>
     <link rel="stylesheet" href="qr.css">
+    <link rel="stylesheet" href="responsive.css">
 </head>
 
 <body>
     <div class="container">
-        <label>Write text or URL :</label>
-            <p spellcheck="false"  contenteditable="true" id="p" ></p>
+        <label for="p">Write text or URL :</label>
+        <p  id="p"  spellcheck="false" contenteditable="true"></p>
         <div id="imgbox">
-            <img src="" id="qrimg">
+            <img src=" " alt="image" id="qrimg">
         </div>
         <button id="btn" onclick="makeQR()">Generate QR</button>
     </div>
     <script>
-        
 
-        let qrtext = document.getElementById("p");
-        let imgbox = document.getElementById("imgbox");
+
+        let qrtext = document.querySelector("#p");
+        // let imgbox = document.getElementById("imgbox");
         let qrimg = document.getElementById("qrimg");
 
         function makeQR() {
-            qrimg.src = "https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=" +qrtext.innerText;
-            
+            qrimg.src = `https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=` + qrtext.innerText;
+            console.log("happy now", qrtext.innerText);
         }
 
 
